Add last update time to main widget.

--- a/ss-link/mainwidget.ui
+++ b/ss-link/mainwidget.ui
@@ -28,6 +28,16 @@
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
+      <widget class="QLabel" name="labelLastUpdate">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="MinimumExpanding" vsizetype="Preferred">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+      </widget>
+     </item>
+     <item>
       <widget class="QPushButton" name="buttonRefresh">
        <property name="text">
         <string>&amp;Refresh</string>
