--- a/ss-link/mainwidget.ui
+++ b/ss-link/mainwidget.ui
@@ -28,6 +28,13 @@
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
+      <widget class="QPushButton" name="buttonQRCode">
+       <property name="text">
+        <string>&amp;QR Code</string>
+       </property>
+      </widget>
+     </item>
+     <item>
       <widget class="QLabel" name="labelLastUpdate">
        <property name="sizePolicy">
         <sizepolicy hsizetype="MinimumExpanding" vsizetype="Preferred">
@@ -58,6 +65,9 @@
  <layoutdefault spacing="6" margin="11"/>
  <tabstops>
   <tabstop>treeView</tabstop>
+  <tabstop>buttonQRCode</tabstop>
+  <tabstop>buttonExit</tabstop>
+  <tabstop>buttonRefresh</tabstop>
  </tabstops>
  <resources>
   <include location="shadowsocks.qrc"/>
